kudemo-todo-api-deployment-with-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kudemo-todo-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: temmyvirtuoso/kudemo-todo-api:1.0
          ports:
            - containerPort: 8080
