ingress-service-old-version.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.example
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: kudemo-todo-ui-cluster-ip-service
            port: 
              number: 80
      - pathType: Prefix
        path: /api/?(.*)
        backend:
          service:
            name: api-load-balancer-service
            port: 
              number: 8080
